# kanon

./: .gitignore  README.md  justfile  pyproject.toml
.claude/: CLAUDE.md
.kanon/: .gitignore  STRUCTURE.md  audit-v1.md  audit-v2.md  kanon.yaml  todo.yaml
.spek/: .gitignore  CHANGELOG.md  STRUCTURE.md  TODO.md  spek.yaml  todo.yaml
kanons/docs/: kanons.md  library.md  references.md  structure.md
kanons/systems/: base.md
kanons/workflow/: base.md  kanon-amend.md  kanon-audit.md  kanon-build.md  kanon-detour.md  kanon-fix.md  kanon-onboard.md  kanon-plan.md  kanon-reconcile.md  kanon-retro.md  kanon-review.md  kanon-sketch.md  kanon-stance.md  kanon-think.md  kanon-todo.md  kanon-why.md
profiles/base/: ai.yaml  base.yaml  docs.yaml  git.yaml  tools.yaml  workflow.yaml
profiles/python/: base.yaml  cli.yaml  webservice.yaml
references/: kanons.md  library.md  modules.md  references.md
references/bulma/: navbar-simple.md
references/spek/: references.md  specs.md
specs/ai/: assume-and-proceed.md  challenge-premise.md  (+9 more)
stances/: architect.yaml  autonomous.yaml  collaborative.yaml  critic.yaml  reviewer.yaml  skeptic.yaml
tests/: conftest.py  test_cache_and_pull.py  test_check_cli.py  test_config.py  test_destroy_cli.py  test_kanon_cli.py  test_kanons.py  test_local_cli.py  test_module_cli.py  test_modules.py  test_plan.py  test_plan_cli.py  test_profile_cli.py  test_profiles.py  test_ref_cli.py  test_render.py  test_session.py  test_settings.py  test_source_cli.py  test_sources.py  test_sync_cli.py  test_todo.py  test_utils.py  test_yaml_utils.py
(+308 files in other folders)
