[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "haondt-spek"
dynamic = ["version"]
description = "CLI for managing AI-assisted development conventions across projects"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
dependencies = [
    "click>=8.4.0",
    "gitpython>=3.1.50",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
]


[project.scripts]
spek = "spek.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.hatch.version]
path = "src/spek/_metadata.py"

[tool.hatch.build.targets.wheel]
packages = ["src/spek"]

