[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "haondt-kanon"
dynamic = ["version"]
description = "CLI for managing AI-assisted development conventions across projects"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
dependencies = [
    "click",
    "gitpython",
    "jinja2",
    "pydantic",
    "pyyaml",
    "questionary",
]


[project.scripts]
kanon = "kanon.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.hatch.version]
path = "src/kanon/_metadata.py"

[tool.hatch.build.targets.wheel]
packages = ["src/kanon"]

